добавлены файлы локализации ru en переписаны шаблоны с учетом возможности локализации добавлена возможность смены языка рефакторинг

--- a/templates/catalog/index.html
+++ b/templates/catalog/index.html
@@ -1,5 +1,6 @@
 {% extends "catalog.html" %}
+{% load i18n %}
 
 {% block content %}
-	<h1>Welcome to our shop!</h1>
+	<h1>{% trans "Welcome to our shop!" %}</h1>
 {% endblock %}
