--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "catalog.html" %}
+{% load i18n %}
 
 {% block content %}
-	<h2>Welcome!</h2>
+	<h2>{% trans "Welcome!" %}</h2>
 {% endblock %}
