--- a/templates/tags/navigation.html
+++ b/templates/tags/navigation.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 <ul>
-	<li><a href="/catalog/">Home</a></li>
-	<li><a href="/catalog/">About</a></li>
-	<li><a href="/catalog/">Privacy</a></li>
-	<li><a href="/catalog/">Products</a></li>
-	<li><a href="/catalog/">Contact</a></li>
+	<li><a href="/catalog/">{% trans "Home" %}</a></li>
+	<li><a href="/catalog/">{% trans "About" %}</a></li>
+	<li><a href="/catalog/">{% trans "Privacy" %}</a></li>
+	<li><a href="/catalog/">{% trans "Products" %}</a></li>
+	<li><a href="/catalog/">{% trans "Contact" %}</a></li>
 </ul>
 <div class="cb"></div>
