--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,19 @@
 	<meta name="description" content="{{ meta_description }}" />
 </head>
 <body>
+	{% load i18n %}
+	{% load settings_webstore %}
 	{% block site_wrapper %}{% endblock %}
+	
+	{% get_setting "MIDDLEWARE_CLASSES" as middleware_classes %}
+	{% if "django.middleware.locale.LocaleMiddleware" in middleware_classes %}
+		<form action="{% url set_language %}" method="post">{% csrf_token %}
+			<select name="language" onchange="this.form.submit()">
+				{% for lang in LANGUAGES %}
+					<option value="{{ lang.0 }}" {% if lang.0 == LANGUAGE_CODE %}selected="selected"{% endif %}>{{ lang.0|language_name_local|capfirst }}</option>
+				{% endfor %}
+			</select>
+		</form>
+	{% endif %}
 </body>
 </html>
