--- a/templates/tags/category_list.html
+++ b/templates/tags/category_list.html
@@ -1,4 +1,6 @@
-<h3>Categories</h3>
+{% load i18n %}
+
+<h3>{% trans "Categories" %}</h3>
 {% for c in active_categories %}
 	<a href="{{ c.get_absolute_url }}">{{ c.name }}</a><br />
 {% endfor %}
