--- a/webshop/templates/tags/navigation.html
+++ b/webshop/templates/tags/navigation.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <ul>
-	<li><a href="{% catalog_home %}">{% trans "Home" %}</a></li>
+	<li><a href="{% url catalog_home %}">{% trans "Home" %}</a></li>
 	<li><a href="/about/">{% trans "About" %}</a></li>
 	<li><a href="/privacy-policy/">{% trans "Privacy" %}</a></li>
 	<li><a href="/about/contacts/">{% trans "Contact" %}</a></li>
