--- a/webshop/templates/base.html
+++ b/webshop/templates/base.html
@@ -2,24 +2,41 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/css.css" />
+	<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet" />
+	<link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
+	<link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>{% block title %}{% if page_title %}{{ page_title }} - {% endif %}{{ site_name }}{% endblock %}</title>
+	<meta charset="utf-8" />
 	<meta name="keywords" content="{{ meta_keywords }}" />
 	<meta name="description" content="{{ meta_description }}" />
+	<!--[if lt IE 9]>
+  	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
 </head>
 <body>
 	{% load i18n %}
 	{% load settings_webstore %}
-	{% block site_wrapper %}{% endblock %}
-	{% get_setting "MIDDLEWARE_CLASSES" as middleware_classes %}
-	{% if "django.middleware.locale.LocaleMiddleware" in middleware_classes %}
-		<form action="{% url set_language %}" method="post">{% csrf_token %}
-			<select name="language" onchange="this.form.submit()">
-				{% for lang in LANGUAGES %}
-					<option value="{{ lang.0 }}" {% if lang.0 == LANGUAGE_CODE %}selected="selected"{% endif %}>{{ lang.0|language_name_local|capfirst }}</option>
-				{% endfor %}
-			</select>
-		</form>
-	{% endif %}
+	<div class="row">
+		<div class="span10 offset1">
+			{% block site_wrapper %}{% endblock %}
+		</div>
+	</div>
+	<div class="row">
+		<div class="span10 offset1">
+			{% get_setting "MIDDLEWARE_CLASSES" as middleware_classes %}
+			{% if "django.middleware.locale.LocaleMiddleware" in middleware_classes %}
+				<form action="{% url set_language %}" method="post">{% csrf_token %}
+					<select name="language" onchange="this.form.submit()">
+						{% for lang in LANGUAGES %}
+							<option value="{{ lang.0 }}" {% if lang.0 == LANGUAGE_CODE %}selected="selected"{% endif %}>{{ lang.0|language_name_local|capfirst }}</option>
+						{% endfor %}
+					</select>
+				</form>
+			{% endif %}
+		</div>
+	</div>
+	<script src="{{ STATIC_URL }}js/jquery.min.js"></script>
+	<script src="{{ STATIC_URL }}js/custom.js"></script>
 </body>
 </html>
