Список категорий заменен на их дерево mptt

--- a/webshop/templates/catalog.html
+++ b/webshop/templates/catalog.html
@@ -23,7 +23,7 @@
 				<div class="sidebarIEPadder">
 					[search box here]
 					<br />
-					{% category_list request.path %}
+					{% categories_tree request %}
 				</div>
 			</div>
 			<div id="content">
