--- a/webshop/templates/cart/cart.html
+++ b/webshop/templates/cart/cart.html
@@ -29,18 +29,18 @@
 			</td>
 			<td class="right">
 				<form method="post" action="." class="cart">{% csrf_token %}
-					<label for="quantity">{% trans "Quantity" %}:</label>
+					<label class="control-label" for="quantity">{% trans "Quantity" %}:</label>
 					<input type="text" name="quantity" value="{{ item.quantity }}" id="quantity" size="2" class="quantity" maxlength="5" />
 					<input type="hidden" name="item_id" value="{{ item.id }}" />
 				</td>
 				<td>
-					<input class="btn btn-success" type="submit" name="update" value="{% trans "Update" %}" />
+					<button class="btn btn-info" type="submit" name="update"><i class="icon-refresh icon-white"></i> {% trans "Update" %}</button>
 				</form>
 			</td>
 			<td>
-				<form action="." method="post" class="cart">{% csrf_token %}
+				<form method="post" action="." class="cart">{% csrf_token %}
 					<input type="hidden" name="item_id" value="{{ item.id }}" />
-					<input class="btn btn-success" type="submit" name="remove" value="{% trans "Remove" %}" />
+					<button class="btn btn-danger" type="submit" name="remove"><i class="icon-trash icon-white"></i> {% trans "Remove" %}</button>
 				</form>
 			</td>
 			<td class="right">$ {{ item.total }}</td>
