--- a/webshop/templates/common/navigation.html
+++ b/webshop/templates/common/navigation.html
@@ -1,6 +1,7 @@
 {% block navigation %}
 	{% load i18n %}
-	<div class="navbar navbar-inner navbar-fixed-top">
+	<div class="navbar">
+		<div class="navbar-inner">
 			<div class="container">
 				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></a>
 				<a class="brand" href="/">{% trans "Document store" %}</a>
@@ -19,6 +20,7 @@
 					</form>
 				</div>
 			</div>
+		</div>
 	</div>
 {% endblock %}
 
