--- a/webshop/templates/base.html
+++ b/webshop/templates/base.html
@@ -10,30 +10,26 @@
 	<meta charset="utf-8" />
 	<meta name="keywords" content="{{ meta_keywords }}" />
 	<meta name="description" content="{{ meta_description }}" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!--[if lt IE 9]>
   	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 </head>
 <body>
-	{% load i18n %}
-	{% load settings_webstore %}
-	<div class="row">
-		<div class="span10 offset1">
+	{% include "common/navigation.html" %}
+	<div class="row-fluid">
+		<div class="span12">
 			{% block site_wrapper %}{% endblock %}
 		</div>
 	</div>
+	<div class="row-fluid">
+		<div class="span12">
+			{% block header %}{% endblock %}
+		</div>
+	</div>
 	<div class="row">
-		<div class="span10 offset1">
-			{% get_setting "MIDDLEWARE_CLASSES" as middleware_classes %}
-			{% if "django.middleware.locale.LocaleMiddleware" in middleware_classes %}
-				<form action="{% url set_language %}" method="post">{% csrf_token %}
-					<select name="language" onchange="this.form.submit()">
-						{% for lang in LANGUAGES %}
-							<option value="{{ lang.0 }}" {% if lang.0 == LANGUAGE_CODE %}selected="selected"{% endif %}>{{ lang.0|language_name_local|capfirst }}</option>
-						{% endfor %}
-					</select>
-				</form>
-			{% endif %}
+		<div class="span12">
+			{% include "common/languages.html" %}
 		</div>
 	</div>
 	<script src="{{ STATIC_URL }}js/jquery.min.js"></script>
