--- a/webshop/templates/common/navigation.html
+++ b/webshop/templates/common/navigation.html
@@ -1,26 +1,32 @@
 {% block navigation %}
-	{% load i18n %}
-	<div class="navbar">
-		<div class="navbar-inner">
-			<div class="container">
-				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></a>
-				<a class="brand" href="/">{% trans "Document store" %}</a>
-				<div class="nav-collapse">
-					<ul class="nav" id="nav">
+{% load i18n %}
+
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container-fluid">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="/">{% trans "Internet magazine" %}</a>
+      <div class="nav-collapse">
+        <ul class="nav" id="nav">
 {#						{% if user.is_authenticated %}#}
-							<li><a href="{% url catalog_home %}">{% trans "Catalog" %}</a></li>
-							<li><a href="{% url show_cart %}">{% trans "Shopping Cart" %}</a></li>
+            <li><a href="{% url catalog_home %}">{% trans "Catalog" %}</a></li>
+            <li><a href="{% url show_cart %}">{% trans "Shopping Cart" %}</a></li>
 {#							<li><a href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a></li>#}
 {#						{% else %}#}
 {#							<li><a href="{% url django.contrib.auth.views.login %}">{% trans "Login" %}</a></li>#}
 {#						{% endif %}#}
-					</ul>
-					<form class="navbar-search pull-right" action=".">
-						<input type="text" class="search-query span2" placeholder="{% trans "Search..." %}">
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
+        </ul>
+        <form class="navbar-search pull-right" action=".">
+          <input type="text" class="search-query span2" placeholder="{% trans "Search..." %}">
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
 
