--- a/webshop/templates/base.html
+++ b/webshop/templates/base.html
@@ -7,32 +7,42 @@
 	<link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>{% block title %}{% if page_title %}{{ page_title }} - {% endif %}{{ site_name }}{% endblock %}</title>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
 	<meta name="keywords" content="{{ meta_keywords }}" />
 	<meta name="description" content="{{ meta_description }}" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!--[if lt IE 9]>
   	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
+  <style type="text/css">
+    body {
+      padding-top: 60px;
+      padding-bottom: 40px;
+    }
+  </style>
 </head>
 <body>
 	{% include "common/navigation.html" %}
-	<div class="row-fluid">
-		<div class="span12">
-			{% block header %}{% endblock %}
+	<div class="container-fluid">
+		<div class="row-fluid">
+			<div class="span12">
+				{% block header %}{% endblock %}
+			</div>
 		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="span12">
-			{% block site_wrapper %}{% endblock %}
+		<div class="row-fluid">
+			<div class="span12">
+				{% block site_wrapper %}{% endblock %}
+			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="span12">
-			{% include "common/languages.html" %}
+		<div class="row-fluid">
+			<div class="span12">
+				{% include "common/languages.html" %}
+			</div>
 		</div>
 	</div>
 	<script src="{{ STATIC_URL }}js/jquery.min.js"></script>
 	<script src="{{ STATIC_URL }}js/custom.js"></script>
+  <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
+	<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js"></script>
 </body>
 </html>
