--- a/webshop/templates/common/navigation.html
+++ b/webshop/templates/common/navigation.html
@@ -12,16 +12,17 @@
       <a class="brand" href="/">{% trans "Internet magazine" %}</a>
       <div class="nav-collapse">
         <ul class="nav" id="nav">
-{#						{% if user.is_authenticated %}#}
             <li><a href="{% url catalog_home %}">{% trans "Catalog" %}</a></li>
             <li><a href="{% url show_cart %}">{% trans "Shopping Cart" %}</a></li>
-{#							<li><a href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a></li>#}
-{#						{% else %}#}
-{#							<li><a href="{% url django.contrib.auth.views.login %}">{% trans "Login" %}</a></li>#}
-{#						{% endif %}#}
+						{% if user.is_authenticated %}
+              <li><a href="{% url my_account %}">{% trans "My Account" %}</a></li>
+							<li><a href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a></li>
+						{% else %}
+							<li><a href="{% url django.contrib.auth.views.login %}">{% trans "Login" %}</a></li>
+						{% endif %}
         </ul>
         <form class="navbar-search pull-right" action=".">
-          <input type="text" class="search-query span2" placeholder="{% trans "Search..." %}">
+          <input type="text" class="search-query span2" placeholder="{% trans "Search..." %}" />
         </form>
       </div>
     </div>
