--- a/webshop/templates/registration/my_account.html
+++ b/webshop/templates/registration/my_account.html
@@ -26,7 +26,7 @@
       </a>
     </li>
     <li>
-      <a href="{% url order_info %}">{% trans "Edit Billing/Shipping information" %}</a>
+      <a href="{% url orders_info %}">{% trans "Edit Billing/Shipping information" %}</a>
     </li>
   </ul>
   </fieldset>
