--- a/webshop/templates/catalog/product.html
+++ b/webshop/templates/catalog/product.html
@@ -3,42 +3,45 @@
 {% load catalog_filters %}
 
 {% block content %}
-	<div class="product_image">
-		<img src="{{ STATIC_URL }}images/products/main/{{ p.image }}" alt="{{ p.name }}" />
-	</div>
-	<h1>{{ p.name }}</h1>
-	{% trans "Brand" %}: <em>{{ p.brand }}</em>
-	<br /><br />
-	{% trans "SKU" %}: {{ p.sku }}
+  <div class="row-fluid">
+    <div class="span4">
+      <div align="center">
+        <img src="{{ STATIC_URL }}images/products/main/{{ p.image }}" alt="{{ p.name }}" />
+      </div>
+    </div>
+    <div class="span6">
+      <h1>{{ p.name }}</h1>
+      {% trans "Brand" %}: <em>{{ p.brand }}</em>
+      <br /><br />
+	    {% trans "SKU" %}: {{ p.sku }}
+	    <br />
+      {# Переписать V #}
+      {% blocktrans count counter=categories|length %}
+        In category:
+      {% plural %}
+        In categories:
+      {% endblocktrans %}
+      {% for c in categories %}
+        <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
+        {% if not forloop.last %}, {% endif %}
+      {% endfor %}
+      <br /><br />
+      {% if p.sale_price %}
+        {% trans "Was" %}: {{ p.old_price }} {% trans "руб." %}
+        <br />
+        {% trans "Now" %}: {{ p.price }} {% trans "руб." %}
+      {% else %}
+        {% trans "Price" %}: {{ p.price }} {% trans "руб." %}
+      {% endif %}
+      <br /><br />
+      <form method="post" action="." class="cart">{% csrf_token %}
+        {{ form.as_p }}
+        <input class="btn btn-primary" type="submit" value="{% trans "Add To Cart" %}"
+               name="submit" alt="{% trans "Add To Cart" %}" />
+      </form>
+    </div>
+  </div>
 	<br />
-	{# Переписать V #}
-	{% blocktrans count counter=categories|length %}
-		In category:
-		{% plural %}
-		In categories:
-	{% endblocktrans %}
-		{% for c in categories %}
-			<a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
-			{% if not forloop.last %}, {% endif %}
-		{% endfor %}
-	<br /><br />
-	{% if p.sale_price %}
-		{% trans "Was" %}: $ {{ p.old_price }}
-		<br />
-		{% trans "Now" %}: $ {{ p.price }}
-	{% else %}
-		{% trans "Price" %}: $ {{ p.price }}
-	{% endif %}
-	<br /><br />
-		<form method="post" action="." class="cart">{% csrf_token %}
-			{{ form.as_p }}
-		<br />
-		<input type="submit" value="{% trans "Add To Cart" %}" name="submit" alt="{% trans "Add To Cart" %}" />
-		</form>
-		<div class="cb"></div>
-	<br /><br />
-	<div class="cb"><br /><br /></div>
 	<h3>{% trans "Product Description" %}</h3>
 		{{ p.description }}
 {% endblock %}
-
