--- a/webshop/templates/catalog/product.html
+++ b/webshop/templates/catalog/product.html
@@ -6,7 +6,7 @@
   <div class="row-fluid">
     <div class="span4">
       <div align="center">
-        <img src="{{ STATIC_URL }}images/products/main/{{ p.image }}" alt="{{ p.name }}" />
+        <img src="{{ product_image.url }}" alt="{{ p.name }}" />
       </div>
     </div>
     <div class="span6">
