--- a/webshop/templates/base.html
+++ b/webshop/templates/base.html
@@ -5,6 +5,7 @@
 	<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet" />
 	<link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
 	<link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet" />
+<link href="{{ STATIC_URL }}css/categoryproducts.css" rel="stylesheet" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>{% block title %}{% if page_title %}{{ page_title }} - {% endif %}{{ site_name }}{% endblock %}</title>
 	<meta charset="utf-8">
