--- a/webshop/templates/catalog/category.html
+++ b/webshop/templates/catalog/category.html
@@ -8,11 +8,13 @@
 	{% for p in products %}
 		<div class="product_thumbnail">
 			<a href="{{ p.get_absolute_url }}">
-				<img src="{{ STATIC_URL }}images/products/thumbnails/{{ p.image }}"
-				alt="{{ p.name }}" class="bn" />
+				<img src="{{ p.image_url }}"
+				alt="{{ p.name }}" />
 				<br />
 				{{ p.name }}
-			</a>
+        </a>
+        <br />
+        {{ p.price }} руб.
 		</div>
 	{% endfor %}
 {% endblock %}
