--- a/webshop/templates/catalog/product.html
+++ b/webshop/templates/catalog/product.html
@@ -41,33 +41,48 @@
       </form>
     </div>
   </div>
-	<br />
-	<h3>{% trans "Product Description" %}</h3>
-		{{ p.description }}
-  <br /><br />
-  <div class="row-fluid">
-    <div class="span5">
-      {% if characteristics %}
-      <table class="table table-striped table-bordered table-condensed">
-        <caption>{% trans "Product characteristics" %}</caption>
-          <thead>
-          <tr>
-            <th><b>{% trans "Characteristic" %}</b></th>
-            <th>{% trans "Value" %}</th>
-          </tr>
-          <tbody>
-            {% for characteristic in characteristics %}
-            <tr>
-              <th>{{ characteristic.characteristic_type }}</th>
-              <th>{{ characteristic.value }}</th>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </thead>
-      </table>
-    {% else %}
-        {% trans "Characteristics not specified" %}
-    {% endif %}
+
+	<br /><br />
+
+  <div class="tabbable">
+
+    <ul class="nav nav-tabs" id="myTab">
+      <li class="active"><a href="#description" data-toggle="tab">{% trans "Product Description" %}</a></li>
+      <li><a href="#characteristics" data-toggle="tab">{% trans "Product characteristics" %}</a></li>
+    </ul>
+
+    <div class="tab-content">
+      <div class="tab-pane active" id="description">{{ p.description }}</div>
+      <div class="tab-pane" id="characteristics">
+        <div class="row-fluid">
+          <div class="span5">
+            {% if characteristics %}
+              <table class="table table-striped table-bordered table-condensed">
+              <caption>{% trans "Product characteristics" %}</caption>
+                <thead>
+                <tr>
+                  <th><b>{% trans "Characteristic" %}</b></th>
+                  <th>{% trans "Value" %}</th>
+                </tr>
+                <tbody>
+                  {% for characteristic in characteristics %}
+                    <tr>
+                    <th>{{ characteristic.characteristic_type }}</th>
+                    <th>{{ characteristic.value }}</th>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </thead>
+            </table>
+            {% else %}
+              {% trans "Characteristics not specified" %}
+            {% endif %}
+          </div>
+         </div>
+      </div>
     </div>
+
   </div>
+
+<br /><br />
 {% endblock %}
