--- a/webshop/templates/base.html
+++ b/webshop/templates/base.html
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 	<script src="{{ STATIC_URL }}js/jquery.min.js"></script>
-{#	<script src="{{ STATIC_URL }}js/custom.js"></script>#}
+	<script src="{{ STATIC_URL }}js/custom.js"></script>
   <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
 	<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js"></script>
   <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-tab.js"></script>
