tab for feedbacks

--- a/webshop/templates/catalog/product.html
+++ b/webshop/templates/catalog/product.html
@@ -47,8 +47,9 @@
   <div class="tabbable">
 
     <ul class="nav nav-tabs" id="myTab">
-      <li class="active"><a href="#description" data-toggle="tab">{% trans "Product Description" %}</a></li>
-      <li><a href="#characteristics" data-toggle="tab">{% trans "Product characteristics" %}</a></li>
+      <li class="active"><a href="#description" data-toggle="tab">{% trans "Description" %}</a></li>
+      <li><a href="#characteristics" data-toggle="tab">{% trans "Characteristics" %}</a></li>
+      <li><a href="#feedback" data-toggle="tab">{% trans "Feedback" %}</a></li>
     </ul>
 
     <div class="tab-content">
@@ -80,6 +81,7 @@
           </div>
          </div>
       </div>
+      <div class="tab-pane" id="feedback">Feedback... TODO</div>
     </div>
 
   </div>
