fixed navigation and encoding

--- a/webshop/templates/catalog/index.html
+++ b/webshop/templates/catalog/index.html
@@ -2,5 +2,23 @@
 {% load i18n %}
 
 {% block content %}
-	<h1>{% trans "Welcome to our shop!" %}</h1>
+	<h2>{% trans "Welcome to our shop!" %}</h2>
+  {% if products %}
+    <h3>{% trans "Feautured products" %}</h3><br />
+    {% for p in products %}
+      <div class="product_thumbnail">
+        <a href="{{ p.get_absolute_url }}">
+          <img src="{{ p.image_url }}"
+               alt="{{ p.name }}" />
+          <br />
+          {{ p.name }}
+          </a>
+          <br />
+          {{ p.price }} руб.
+      </div>
+    {% endfor %}
+  {% else %}
+    {% trans "Feautured products not found" %}
+  {% endif %}
+  <br /><br />
 {% endblock %}
