--- a/webshop/templates/base.html
+++ b/webshop/templates/base.html
@@ -6,7 +6,7 @@
 	<link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
 	<link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet" />
   <link href="{{ STATIC_URL }}css/categoryproducts.css" rel="stylesheet" />
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
 	<title>{% block title %}{% if page_title %}{{ page_title }} - {% endif %}{{ site_name }}{% endblock %}</title>
 	<meta charset="utf-8">
 	<meta name="keywords" content="{{ meta_keywords }}" />
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 	<script src="{{ STATIC_URL }}js/jquery.min.js"></script>
-	<script src="{{ STATIC_URL }}js/custom.js"></script>
+  <script src="{{ STATIC_URL }}js/custom.js"></script>
   <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
 	<script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js"></script>
   <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-tab.js"></script>
