--- a/webshop/templates/common/navigation.html
+++ b/webshop/templates/common/navigation.html
@@ -9,10 +9,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="/">{% trans "Internet magazine" %}</a>
+      <a class="brand" href="{% url catalog_home %}">{% trans "Internet magazine" %}</a>
       <div class="nav-collapse">
         <ul class="nav tabbar" id="nav">
-            <li><a href="{% url catalog_home %}">{% trans "Catalog" %}</a></li>
             <li><a href="{% url show_cart %}">{% trans "Shopping Cart" %}</a></li>
 						{% if user.is_authenticated %}
               <li><a href="{% url my_account %}">{% trans "My Account" %}</a></li>
