--- a/webshop/templates/catalog.html
+++ b/webshop/templates/catalog.html
@@ -23,7 +23,7 @@
 	</div>
 	<div class="row-fluid" align="center">
 		<div class="span12">
-			{% footer_links %}
+{#			{% footer_links %}#}
 		</div>
 	</div>
 {% endblock %}
