added template tags for lineedit and combobox

--- a/webshop/templates/checkout/checkout.html
+++ b/webshop/templates/checkout/checkout.html
@@ -7,48 +7,42 @@
   <div class="row-fluid">
     <h1>{% trans "Checkout" %}</h1>
     {% if error_message %}
-      <ul class="alert alert-error">
-        <li>{{ error_message }}</li>
-      </ul>
+      <div class="row-fluid">
+      <div class="alert alert-error span5">
+        {{ error_message }}
+      </div>
+    </div>
     {% endif %}
     <form class="form-horizontal" action="." method="post">
       <fieldset>
         <legend>{% trans "Contact Info" %}</legend>
-          {% form_table_row form.email %}
-          {% form_table_row form.phone %}
+          {% form_row form.email %}
+          {% form_row form.phone %}
       </fieldset>
       <fieldset>
         <legend>{% trans "Shipping Info" %}</legend>
-          {% form_table_row form.shipping_name %}
-          {% form_table_row form.shipping_address_1 %}
-          {% form_table_row form.shipping_address_2 %}
-          {% form_table_row form.shipping_city %}
-          {% form_table_row form.shipping_zip %}
-          {% form_table_row form.shipping_country %}
+          {% form_row form.shipping_name %}
+          {% form_row form.shipping_address_1 %}
+          {% form_row form.shipping_address_2 %}
+          {% form_row form.shipping_city %}
+          {% form_row form.shipping_zip %}
+          {% form_row form.shipping_country %}
       </fieldset>
       <fieldset>
         <legend>{% trans "Billing Info" %}</legend>
-          {% form_table_row form.billing_name %}
-          {% form_table_row form.billing_address %}
-          {% form_table_row form.billing_city %}
-          {% form_table_row form.billing_zip %}
-          {% form_table_row form.billing_country %}
+          {% form_row form.billing_name %}
+          {% form_row form.billing_address %}
+          {% form_row form.billing_city %}
+          {% form_row form.billing_zip %}
+          {% form_row form.billing_country %}
       </fieldset>
       <fieldset>
         <legend>{% trans "Credit Card Info" %}</legend>
-          {% form_table_row form.credit_card_number %}
-          <div class="control-group">
-            <label class="control-label" for="{{ form.credit_card_type.auto_id }}">
-              {% trans "Credit card type" %}
-            </label>
-            <div class="controls">
-              {{ form.credit_card_type }}
-            </div>
-          </div>
-        # TODO фильтр для selectov
-          {% form_table_row form.credit_card_expire_month %}
-          {% form_table_row form.credit_card_expire_year %}
-          {% form_table_row form.credit_card_cvv %}
+          {% form_row form.credit_card_number %}
+          {% choice_field form.credit_card_type %}
+          {% choice_field form.credit_card_expire_month %}
+          {% choice_field form.credit_card_expire_year %}
+          {% form_row form.credit_card_cvv %}
       </fieldset>
     </form>
   </div>
@@ -58,4 +52,8 @@
     <i class="icon-shopping-cart icon-white"></i> {% trans " Place order" %}</button>
   </form>
 
+  <div class="alert alert-info span5">
+    <strong>{% trans "Warning" %}!</strong><br />
+    * {% trans "Required fields" %}
+  </div>
 {% endblock %}
