--- a/webshop/templates/registration/order_details.html
+++ b/webshop/templates/registration/order_details.html
@@ -2,5 +2,38 @@
 {% load i18n %}
 
 {% block content %}
-
+  <table class="table table-striped table-bordered table-condensed">
+		<caption>
+			{% trans "Details for Order" %} #{{ order.id }}
+		</caption>
+		<thead>
+		<tr>
+			<th scope="col">{% trans "Name" %}</th>
+			<th scope="col">{% trans "Price" %}</th>
+			<th scope="col">{% trans "Quantity" %}</th>
+			<th class="right" scope="col">{% trans "Total" %}</th>
+		</tr>
+		</thead>
+		<tbody>
+		{% for item in order_items %}
+      <tr>
+			<td>
+				<a href="{{ item.get_absolute_url }}">
+					{{ item.name }}
+				</a>
+			</td>
+			<td>{{ item.price }} руб.</td>
+			<td>{{ item.quantity }}</td>
+			<td class="right">{{ item.total }} руб.</td>
+		</tr>
+    {% endfor %}
+		</tbody>
+  	<tfoot>
+			<tr>
+				<td colspan="4" class="right" style="height:30px; text-align: right">
+				{% trans "Order Total" %}: {{ order.total }} руб.
+				</td>
+			</tr>
+		</tfoot>
+	</table>
 {% endblock %}
