--- a/webshop/templates/catalog/product.html
+++ b/webshop/templates/catalog/product.html
@@ -11,8 +11,10 @@
     </div>
     <div class="span6">
       <h1>{{ p.name }}</h1>
+      {% trans "ID" %}: {{ p.id }}
+      <br />
       {% trans "Brand" %}: <em>{{ p.brand }}</em>
-      <br /><br />
+      <br />
 	    {% trans "SKU" %}: {{ p.sku }}
 	    <br />
       {# Переписать V #}
