--- a/webshop/templates/registration/my_account.html
+++ b/webshop/templates/registration/my_account.html
@@ -8,9 +8,8 @@
   <fieldset>
     <legend>{% trans "Order history" %}</legend>
     {% for order in orders %}
-      <a href="{{ order.get_absolute_url }}">
-        {% trans "Order" %} #{{ order.id }} - {{ order.date|date }} ({% trans "view" %})
-      </a>
+      {% trans "Order" %} #{{ order.id }} - {{ order.date|date }} <a href="{{ order.get_absolute_url }}">
+      {% trans "(view)" %}</a>
       <br />
     {% empty %}
       {% trans "You have no past orders" %}
@@ -26,7 +25,7 @@
       </a>
     </li>
     <li>
-      <a href="{% url orders_info %}">{% trans "Edit Billing/Shipping information" %}</a>
+      <a href="{% url order_info %}">{% trans "Edit Billing/Shipping information" %}</a>
     </li>
   </ul>
   </fieldset>
