--- a/webshop/templates/tags/form_row.html
+++ b/webshop/templates/tags/form_row.html
@@ -7,7 +7,7 @@
   {% if form_field.field.required %}* {% endif %}{{ form_field.label }}
   </label>
   <div class="controls">
-    <input type="text" class="input-xlarge" id="{{ form_field.auto_id }}">
+    <input type="text" class="input-xlarge" id="{{ form_field.auto_id }}" />
     {% for error in form_field.errors %}
       <span class="help-inline">{{ error }}</span>
     {% endfor %}
