--- a/webshop/templates/tags/search_box.html
+++ b/webshop/templates/tags/search_box.html
@@ -2,5 +2,6 @@
 
 <form class="navbar-search pull-right" id="id_query" action="{% url search_results %}" method="get">
   <input name="query" id="{{ form.auto_id }}" type="text"
-         value="Search" class="search-query span2" placeholder="{% trans "Search..." %}" />
+         value="Search" class="search-query span2" placeholder="{% trans "Search..." %}"
+         onfocus="if(this.value == 'Search') { this.value = ''; }" />
 </form>
